# denoise-fmri

./: MANIFEST.in  README.md  README.rst  Snakefile  config.yml  parse.py  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: python-package.yml  python-testing.yml
cfg/: config.yml  inputs_config.yml  snakebids.yml
config/: snakebids.yml
denoise_fmri/: pipeline_description.json  run.py
denoise_fmri/config/: snakebids.yml
denoise_fmri/workflow/: Snakefile
denoise_fmri/workflow/scripts/: denoise.py  smooth.py
docs/: conf.py  index.rst  requirements.txt
docs/getting_started/: installation.rst
docs/usage/: app_cli.rst
resources/: dataset_description.json
snakebids/: __init__.py  app.py  inputs.py  setup.py
tests/: .test_run.py.swp  test_run.py
tests/bids_01/derivatives/fmriprep/sub-0001/anat/: sub-0001_acq-MPRAGE_run-1_desc-brain_mask.json  sub-0001_acq-MPRAGE_run-1_space-MNI152NLin6Asym_desc-brain_mask.json
tests/bids_01/derivatives/fmriprep/sub-0001/func/: sub-0001_task-movie_run-1_AROMAnoiseICs.csv  sub-0001_task-movie_run-1_desc-confounds_timeseries.json  sub-0001_task-movie_run-1_from-T1w_to-scanner_mode-image_xfm.txt  (+9 more)
tests/bids_01/sub-0001/anat/: sub-0001_acq-MPRAGE_run-01_T1w.json
tests/bids_01/sub-0001/fmap/: sub-0001_magnitude1.json  sub-0001_magnitude2.json  sub-0001_phasediff.json
tests/bids_01/sub-0001/func/: sub-0001_task-movie_run-01_bold.json  sub-0001_task-movie_run-01_events.tsv  sub-0001_task-rest_run-01_bold.json
workflow/: Snakefile
workflow/scripts/: denoise.py
