[tool.poetry]
name = "denoise-fmri"
version = "0.1.0"
description = ""
authors = ["Ali Khan <alik@robarts.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
snakebids = "<0.4.0"
nilearn = "<0.9.0"
venv-pack = "^0.2.0"

[tool.poetry.scripts]
denoise-fmri = "denoise_fmri.run:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
